# api/management/interface/v1/management_interface.pb.validate.go
@@ -800,6 +800,8 @@ func (m *ListUserReply) Validate() error {
 
 	}
 
+	// no validation rules for PageTotal
+
 	return nil
 }
 
@@ -1362,6 +1364,8 @@ func (m *ListAssetReply) Validate() error {
 
 	}
 
+	// no validation rules for PageTotal
+
 	return nil
 }
 
@@ -1847,6 +1851,8 @@ func (m *ListAreaReply) Validate() error {
 
 	}
 
+	// no validation rules for PageTotal
+
 	return nil
 }
 
@@ -2142,6 +2148,8 @@ func (m *ListStorageFormReply) Validate() error {
 		}
 
 	}
+
+	// no validation rules for PageTotal
 
 	return nil
 }
@@ -2954,6 +2962,8 @@ func (m *ListScrappedFormReply) Validate() error {
 		}
 
 	}
+
+	// no validation rules for PageTotal
 
 	return nil
 }
