# api/user/service/v1/user.swagger.json
@@ -102,6 +102,10 @@
           "items": {
             "$ref": "#/definitions/ListUserReplyUser"
           }
+        },
+        "pageTotal": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
